--- a/css/index.css
+++ b/css/index.css
@@ -528,7 +528,37 @@ header .about-img-outer .laptop {
   margin-top: 3px;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 380px) {
+  nav {
+    width: 340px;
+  }
+  nav .hamburger {
+    display: block;
+  }
+  nav .menu {
+    margin: 0;
+    position: absolute;
+    top: -100%;
+    left: 0;
+    width: 290px;
+    height: 200px;
+    background-color: #0b2239;
+    padding: 30px;
+    transition: 0.3s;
+    text-align: center;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+  }
+  nav .menu a {
+    background-color: lightblue;
+    margin: 10px 0px;
+    padding: 10px auto;
+    height: 150px;
+  }
+  nav .menu.active {
+    top: 60px;
+  }
   header {
     display: flex;
     flex-direction: column;
