--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -1,4 +1,15 @@
+
+//font-size-----
+
 $font-big:20px;
 $font-med:16px;
 $font-sml:12px;
+
+// colors--------
+
+$col-primary:#3A3A3A;
+$col-secondary:#696969;
+$col-light:#F2ECFF;
+$col-green:#00C896;
+
 
