--- a/css/index.css
+++ b/css/index.css
@@ -36,7 +36,7 @@ p {
 }
 
 .animated-text span::before {
-  content: "Web Developer";
+  content: "Front-End Web developer";
   color: #00C896;
   animation: words 20s infinite;
 }
@@ -59,16 +59,16 @@ p {
 }
 @keyframes words {
   0%, 20% {
-    content: "Web developer";
+    content: "Front-End Web developer";
   }
   21%, 40% {
-    content: "Graphic Designer";
+    content: "Graphics Designer";
   }
   41%, 60% {
     content: "Programmer";
   }
   61%, 80% {
-    content: "Web developer";
+    content: "Front-End Web developer";
   }
   81%, 100% {
     content: "Graphic Designer";
@@ -87,7 +87,7 @@ nav {
   height: 60px;
   display: flex;
   justify-content: space-between;
-  background-color: #3A3A3A;
+  background-color: #00C896;
   align-items: center;
 }
 nav .portfolio {
@@ -97,7 +97,7 @@ nav .portfolio h3 {
   text-transform: uppercase;
   font-size: 20px;
   font-size: 18px;
-  color: #F2ECFF;
+  color: #3A3A3A;
 }
 nav .menu {
   margin-right: 40px;
@@ -109,10 +109,10 @@ nav .menu a {
   font-weight: 400;
   font-size: 16px;
   transition: 0.2s;
-  color: #F2ECFF;
+  color: #3A3A3A;
 }
 nav .menu a:hover {
-  color: #00C896;
+  color: #F2ECFF;
   transition: 0.2s;
 }
 nav .hamburger {
@@ -220,7 +220,7 @@ header .about-img-outer .about-img img {
   height: 100%;
   border-radius: 50%;
   object-fit: cover;
-  object-position: 0px -80px;
+  object-position: 0px -50px;
 }
 header .about-img-outer .book {
   position: absolute;
@@ -268,7 +268,7 @@ header .about-img-outer .laptop svg {
 .service-outer {
   width: 100vw;
   height: 450px;
-  background-color: #3A3A3A;
+  background-color: #00C896;
 }
 .service-outer h2 {
   text-transform: capitalize;
@@ -280,7 +280,7 @@ header .about-img-outer .laptop svg {
 .service-outer .underline {
   width: 80px;
   height: 3px;
-  background-color: #00C896;
+  background-color: #3A3A3A;
   margin-top: 5px;
   margin: auto;
 }
@@ -327,7 +327,7 @@ header .about-img-outer .laptop svg {
 .skill-outer {
   width: 100vw;
   height: 400px;
-  background-color: #3A3A3A;
+  background-color: #00C896;
 }
 .skill-outer .skill-in {
   width: 100vw;
@@ -359,11 +359,12 @@ header .about-img-outer .laptop svg {
 .skill-outer .skill-in .skill-part1 .skill-upper .skill-img img {
   width: 100%;
   height: 100%;
+  object-fit: contain;
 }
 .skill-outer .skill-in .skill-part1 .skill-upper h4 {
   text-align: center;
   font-size: 16px;
-  color: #F2ECFF;
+  color: #3A3A3A;
 }
 .skill-outer .skill-in .skill-part1 .skill-lower {
   width: 100%;
@@ -380,20 +381,24 @@ header .about-img-outer .laptop svg {
 .skill-outer .skill-in .skill-part1 .skill-lower .skill-img img {
   width: 100%;
   height: 100%;
+  object-fit: contain;
 }
 .skill-outer .skill-in .skill-part1 .skill-lower h4 {
   text-align: center;
   font-size: 16px;
-  color: #F2ECFF;
+  color: #3A3A3A;
 }
 
 .project-outer {
   width: 100vw;
   height: 800px;
-  background-color: #00C896;
+  background-color: #F2ECFF;
+}
+.project-outer h2 {
+  color: #3A3A3A;
 }
 .project-outer .underline {
-  background-color: #3A3A3A;
+  background-color: #00C896;
 }
 .project-outer .project-in {
   width: 100%;
@@ -466,7 +471,7 @@ header .about-img-outer .laptop svg {
 .achieve-outer {
   width: 100vw;
   height: 500px;
-  background-color: #696969;
+  background-color: #00C896;
 }
 .achieve-outer .achieve-in {
   width: 90%;
@@ -488,13 +493,13 @@ header .about-img-outer .laptop svg {
   color: #F2ECFF;
 }
 .achieve-outer .achieve-in .achieve-part1 .achieve-info h4 {
-  text-transform: capitalize;
+  text-transform: uppercase;
   font-size: 16px;
   font-weight: 500;
   text-align: center;
 }
 .achieve-outer .achieve-in .achieve-part1 .achieve-info p {
-  text-transform: capitalize;
+  text-transform: uppercase;
   font-size: 12px;
   font-weight: 500;
   text-align: center;
@@ -522,13 +527,13 @@ header .about-img-outer .laptop svg {
   color: #F2ECFF;
 }
 .achieve-outer .achieve-in .achieve-part2 .achieve-upper .achieve-img .achieve-info h4 {
-  text-transform: capitalize;
+  text-transform: uppercase;
   font-size: 16px;
   font-weight: 500;
   text-align: center;
 }
 .achieve-outer .achieve-in .achieve-part2 .achieve-upper .achieve-img .achieve-info p {
-  text-transform: capitalize;
+  text-transform: uppercase;
   font-size: 12px;
   font-weight: 500;
   text-align: center;
@@ -561,13 +566,13 @@ header .about-img-outer .laptop svg {
   color: #F2ECFF;
 }
 .achieve-outer .achieve-in .achieve-part2 .achieve-lower .achieve-img .achieve-info h4 {
-  text-transform: capitalize;
+  text-transform: uppercase;
   font-size: 16px;
   font-weight: 500;
   text-align: center;
 }
 .achieve-outer .achieve-in .achieve-part2 .achieve-lower .achieve-img .achieve-info p {
-  text-transform: capitalize;
+  text-transform: uppercase;
   font-size: 12px;
   font-weight: 500;
   text-align: center;
@@ -646,11 +651,9 @@ header .about-img-outer .laptop svg {
 }
 
 @media screen and (max-width: 400px) {
-  nav {
-    width: 390px;
-  }
   nav .hamburger {
     display: block;
+    margin-right: 50px;
   }
   nav .menu {
     margin: 0;
@@ -680,7 +683,7 @@ header .about-img-outer .laptop svg {
   header {
     display: flex;
     flex-direction: column;
-    width: 200px;
+    width: 100vw;
     height: 700px;
     margin-top: 70px;
   }
@@ -704,7 +707,7 @@ header .about-img-outer .laptop svg {
   }
   header .about-img-outer .trophy {
     top: 120px;
-    right: 30px;
+    right: 40px;
   }
   header .about-img-outer .laptop {
     top: 250px;
